# xhec-mlops-project-student

./: .pre-commit-config.yaml  Dockerfile  README.md  environment.yml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: ci.yaml
data/: abalone.csv
notebooks/: eda.ipynb  modelling.ipynb
src/modelling/: main.py  predicting.py  preprocessing.py  training.py  utils.py  workflows.py
src/web_service/: main.py
