[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "xhec-mlops-project-student"
authors = [
  { name = "username", email = "user@email.com" },
] # TODO: add authors here
description = "This repository contains the solution for the X-HEC MLOps Project on the industrialization of Abalone age prediction model."
version = "0.0.1"
readme = "README.md"
requires-python = ">3.10"

[project.urls]
"Homepage" = "https://github.com/CharlesS940/xhec-mlops-project-student"

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ["py310", "py311"]

[tool.isort]
profile = "black"
line_length = 88
known_third_party = ["numpy", "pandas", "scikit-learn", "loguru", "pydantic", "seaborn", "mlflow", "pydantic"]

[tool.ruff]
line-length = 88
exclude = ["migrations"]
select = ["E", "F", "I"]