[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "xhec-mlops-project-student"
authors = [
  { name = "Gaspard Hassenforder", email = "gaspard.hassenforder@hec.edu"},
  { name = "Charles Siret", email = "charles.siret@hec.edu"},
  { name = "Tess Coullon", email = "tess.coullon@hec.edu"},
  { name = "Henri Vignal", email = "henri.vignal@hec.edu"},
  { name = "Raphaël Amzallag", email = "raphael.amzallag@hec.edu"}
]

description = "This repository contains the solution for the X-HEC MLOps Project on the industrialization of Abalone age prediction model."
version = "0.0.1"
readme = "README.md"
requires-python = ">3.10"

[project.urls]
"Homepage" = "https://github.com/CharlesS940/xhec-mlops-project-student"

[tool.setuptools]
packages = ["src"]

[tool.ruff]
line-length = 88
exclude = ["migrations"]
lint.select = ["E", "F", "I"]
